# Classroom_Notification

./: .gitignore  2020 ~ 2021 수업시간표.xlsx  Classroom_Day_Time_EDA.ipynb  Classroom_Usage_Analytics.ipynb  LICENSE  Makefile  README.ko.md  README.md  Random_Data_Device_Touches.ipynb  Random_Data_Device_Usage.ipynb  __init__.py  conftest.py  device_touches.xlsx  device_usage.xlsx  download  main.cpp  preprocess.py  pyproject.toml  requirements.txt  run_forecast.py  test_forecast.py
Classroom_EDA/: Classroom_Day_Time_EDA.ipynb  Classroom_EDA.ipynb  PDF_to_Excel.ipynb  readme.md
Data/: 2020 ~ 2021 수업시간표 - 요일,교시 분리.xlsx  readme.md
Device_Usage/: Device_Usage_Analytics.ipynb  readme.md
docs/: README.md
scripts/: run_forecast.py
src/eodi_classroom/: __init__.py  preprocess.py
tests/: test_forecast.py  test_preprocess.py  test_synthetic.py
