[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "eodi-classroom"
version = "0.2.0"
description = "Timetable EDA and device-usage forecasting for the 어디강의실 classroom-notifier project"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "openpyxl>=3.1",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "prophet>=1.1",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
# Lint the maintained package, scripts, and tests. The notebooks under
# Classroom_EDA/ and Device_Usage/ are preserved as the original project
# artifacts and are intentionally not linted.
extend-exclude = ["*.ipynb"]
